// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNextInternalsShareScopeClient getAppDirSharesClient returns the correct config for Next 14 1`] = `
Object {
  "next/dist/client/-next/dist/client/-18-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/",
    "include": Object {
      "request": /request\\|bfcache\\|head-manager\\|use-action-queue/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/client/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/client/app-dir/link-next/link-24-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/client/app-dir/link.js-next/link-25-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link.js",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/compiled/-next/dist/compiled/-19-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/compiled/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/compiled/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/-react-dom/-8-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-10-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-4-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-0-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-server-dom-webpack/client-react-server-dom-webpack/client-16-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-14-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/shared/-next/dist/shared/-17-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-22-app-pages-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-20-app-pages-browser": Object {
    "import": "next/image",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/link-next/link-23-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-21-app-pages-browser": Object {
    "import": "next/script",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "react-dom-react-dom-5-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-1-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-server-dom-webpack/client-react-server-dom-webpack/client-15-app-pages-browser": Object {
    "import": "next/dist/compiled/react-server-dom-webpack/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-3-app-pages-browser": Object {
    "import": "next/dist/compiled/react/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-13-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-11-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;

exports[`getNextInternalsShareScopeClient getAppDirSharesClient returns the correct config for Next 15 1`] = `
Object {
  "next/dist/client/-next/dist/client/-18-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/",
    "include": Object {
      "request": /request\\|bfcache\\|head-manager\\|use-action-queue/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/client/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/client/app-dir/link-next/link-24-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/client/app-dir/link.js-next/link-25-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link.js",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/compiled/-next/dist/compiled/-19-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/compiled/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/compiled/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/-react-dom/-8-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-10-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-4-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-0-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-server-dom-webpack/client-react-server-dom-webpack/client-16-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-14-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/shared/-next/dist/shared/-17-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-22-app-pages-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-20-app-pages-browser": Object {
    "import": "next/image",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/link-next/link-23-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-21-app-pages-browser": Object {
    "import": "next/script",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "react-dom-react-dom-5-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-1-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-server-dom-webpack/client-react-server-dom-webpack/client-15-app-pages-browser": Object {
    "import": "next/dist/compiled/react-server-dom-webpack/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-3-app-pages-browser": Object {
    "import": "next/dist/compiled/react/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-13-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-11-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;

exports[`getNextInternalsShareScopeClient getPagesDirSharesClient returns the correct config for Next 14 1`] = `
Object {
  "next/compat/router-next/compat/router-12-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/compat/router-next/compat/router-14-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-9-pages-dir-browser": Object {
    "import": "react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-10-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-react-7-pages-dir-browser": Object {
    "import": "react",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react/-react/-8-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/shared/-next/dist/shared/-23-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-18-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-22-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/head-next/head-15-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/head-next/head-19-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-16-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-20-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/router-next/router-11-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/router-next/router-13-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-17-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-21-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "react-dom-react-dom-1-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/-react-dom/-6-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-2-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/client.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/client",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-react-0-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/-react/-5-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-4-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-dev-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-runtime-react/jsx-runtime-3-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
}
`;

exports[`getNextInternalsShareScopeClient getPagesDirSharesClient returns the correct config for Next 15 1`] = `
Object {
  "next/compat/router-next/compat/router-12-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/compat/router-next/compat/router-14-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-9-pages-dir-browser": Object {
    "import": "react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-10-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-react-7-pages-dir-browser": Object {
    "import": "react",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react/-react/-8-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/shared/-next/dist/shared/-23-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-18-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-22-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/head-next/head-15-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/head-next/head-19-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-16-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-20-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/router-next/router-11-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/router-next/router-13-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-17-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-21-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "react-dom-react-dom-1-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/-react-dom/-6-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-2-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/client.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/client",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-react-0-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/-react/-5-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-4-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-dev-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-runtime-react/jsx-runtime-3-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
}
`;

exports[`getNextInternalsShareScopeClient returns the correct share scope for a client compiler (Next 14) 1`] = `
Object {
  "next/compat/router-next/compat/router-12-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/compat/router-next/compat/router-14-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/client/-next/dist/client/-18-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/",
    "include": Object {
      "request": /request\\|bfcache\\|head-manager\\|use-action-queue/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/client/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/client/app-dir/link-next/link-24-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/client/app-dir/link.js-next/link-25-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link.js",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/compiled/-next/dist/compiled/-19-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/compiled/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/compiled/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-9-pages-dir-browser": Object {
    "import": "react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-10-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-8-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-10-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-4-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-7-pages-dir-browser": Object {
    "import": "react",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-0-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-server-dom-webpack/client-react-server-dom-webpack/client-16-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/-react/-8-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-14-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/shared/-next/dist/shared/-17-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dist/shared/-next/dist/shared/-23-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-18-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-22-app-pages-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/dynamic-next/dynamic-22-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/head-next/head-15-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/head-next/head-19-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-16-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-20-app-pages-browser": Object {
    "import": "next/image",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/image-next/image-20-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/link-next/link-23-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/router-next/router-11-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/router-next/router-13-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-17-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-21-app-pages-browser": Object {
    "import": "next/script",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "14.0.0",
  },
  "next/script-next/script-21-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^14.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "14.0.0",
  },
  "react-dom-react-dom-1-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom-react-dom-5-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-2-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/client.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/client",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-react-2-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-1-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-server-dom-webpack/client-react-server-dom-webpack/client-15-app-pages-browser": Object {
    "import": "next/dist/compiled/react-server-dom-webpack/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-3-app-pages-browser": Object {
    "import": "next/dist/compiled/react/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-5-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-13-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-4-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-dev-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-runtime-react/jsx-runtime-11-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-3-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
}
`;

exports[`getNextInternalsShareScopeClient returns the correct share scope for a client compiler (Next 15) 1`] = `
Object {
  "next/compat/router-next/compat/router-12-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/compat/router-next/compat/router-14-pages-dir-browser": Object {
    "import": "next/dist/client/compat/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/compat/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/compat/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/client/-next/dist/client/-18-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/",
    "include": Object {
      "request": /request\\|bfcache\\|head-manager\\|use-action-queue/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/client/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/client/app-dir/link-next/link-24-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/client/app-dir/link.js-next/link-25-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/client/app-dir/link.js",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/compiled/-next/dist/compiled/-19-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/compiled/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/compiled/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-9-pages-dir-browser": Object {
    "import": "react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "next/dist/compiled/react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-10-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-dom/-react-dom/-8-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-10-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-4-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-7-pages-dir-browser": Object {
    "import": "react",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "next/dist/compiled/react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-0-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-server-dom-webpack/client-react-server-dom-webpack/client-16-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/-react/-8-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-14-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/shared/-next/dist/shared/-17-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dist/shared/-next/dist/shared/-23-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/shared/",
    "include": Object {
      "request": /shared-runtime/,
    },
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/shared/",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dist/shared/",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-18-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-22-app-pages-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/dynamic-next/dynamic-22-pages-dir-browser": Object {
    "import": "next/dynamic",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dynamic",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/dynamic",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/head-next/head-15-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/head-next/head-19-pages-dir-browser": Object {
    "import": "next/head",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/head",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/head",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-16-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-20-app-pages-browser": Object {
    "import": "next/image",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/image-next/image-20-pages-dir-browser": Object {
    "import": "next/image",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/image",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/image",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/link-next/link-23-app-pages-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "next/dist/client/app-dir/link",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/router-next/router-11-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/router-next/router-13-pages-dir-browser": Object {
    "import": "next/dist/client/router",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/router",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/router",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-17-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": undefined,
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-21-app-pages-browser": Object {
    "import": "next/script",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "15.0.0",
  },
  "next/script-next/script-21-pages-dir-browser": Object {
    "import": "next/script",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/script",
    "requiredVersion": "^15.0.0",
    "shareKey": "next/script",
    "shareScope": "default",
    "singleton": true,
    "version": "15.0.0",
  },
  "react-dom-react-dom-1-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom-react-dom-5-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react-dom",
    "request": "react-dom",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/-react-dom/-6-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react-dom/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-2-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react-dom@19.1.1_react@19.1.1/node_modules/react-dom/client.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "requiredVersion": "^19.1.1",
    "shareKey": "react-dom/client",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/index.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^19.1.1",
    "shareKey": "react",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react-react-2-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "packageName": "react",
    "request": "react",
    "requiredVersion": "^18.2.0",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-1-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-server-dom-webpack/client-react-server-dom-webpack/client-15-app-pages-browser": Object {
    "import": "next/dist/compiled/react-server-dom-webpack/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-server-dom-webpack/client",
    "requiredVersion": "^18.2.0",
    "shareKey": "react-server-dom-webpack/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-3-app-pages-browser": Object {
    "import": "next/dist/compiled/react/",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/-react/-5-pages-dir-browser": Object {
    "allowNodeModulesSuffixMatch": true,
    "import": "react/",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-13-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-4-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-dev-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
  "react/jsx-runtime-react/jsx-runtime-11-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^18.2.0",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-3-pages-dir-browser": Object {
    "import": "<rootDir>/node_modules/.pnpm/react@19.1.1/node_modules/react/jsx-runtime.js",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "requiredVersion": "^19.1.1",
    "shareKey": "react/jsx-runtime",
    "shareScope": "default",
    "singleton": true,
    "version": "19.1.1",
  },
}
`;
